# gen/http/authorization/server/paths.go
@@ -9,10 +9,10 @@ package server
 
 // LoginAuthorizationPath returns the URL path to the Authorization service login HTTP endpoint.
 func LoginAuthorizationPath() string {
-	return "/api/v1/auth/signature"
+	return "/auth/signature"
 }
 
 // RegisterAuthorizationPath returns the URL path to the Authorization service register HTTP endpoint.
 func RegisterAuthorizationPath() string {
-	return "/api/v1/auth/new"
+	return "/auth/new"
 }
